--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "eslint": "^7.32.0",
+    "framer-motion": "^12.34.3",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.3",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.24",
+    "eslint-config-next": "^12.0.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.0",
     "typescript": "^5"
   }
 }
