--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^7.32.0",
     "framer-motion": "^12.34.3",
     "next": "16.1.6",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icon": "^1.0.0",
